--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <!-- image goes here -->
+            <img :src="image">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <a :href="urlx">Visit my website!</a>
+            <p>They are {{ description }}</p>
           </div>
         </div>
       </div>
