L7: set class for div circles too if out of stock

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               @mouseover="updateImage(variant.image)" 
               class="color-circle"
               v-bind:style="{ backgroundColor: variant.color}"
+              :class="{ 'out-of-stock-img': !inStock }"
             ></div>
             <button 
               class="button" 
