--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
     <div id="app">
       <div class="nav-bar"></div>
 
-      <div class="cart">Cart({{ cart }})</div>
-      <product-display :premium="premium"></product-display>
+      <div class="cart">Cart({{ cart.length }})</div>
+      <product-display 
+        :premium="premium"
+        :cart="cart" 
+        @add-to-cart="updateCart"
+        @remove-from-cart="popCart">
+      </product-display>
     </div>
 
     <!-- Import App -->
