--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <div class="nav-bar"></div>
 
       <div class="cart">Cart({{ cart.length }})</div>
-      <product-display :premium="premium" @add-to-cart="updateCart"></product-display>
+      <product-display :premium="premium" :cart="cart" 
+        @add-to-cart="updateCart" @remove-from-cart="removeCart">
+      </product-display>
     </div>
 
     <!-- Import App -->
